--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+body,
+html {
+  font-family: "Bai Jamjuree", serif;
+}
 .amlich {
   border-collapse: collapse;
   font-size: 20px !important;
-  font-family: Roboto, sans-serif;
 }
 .calendar {
   font-size: 1rem;
